# ag2

./: .coveragerc  .gitattributes  .gitignore  .muffet-excluded-links.txt  .pre-commit-config.yaml  .secrets.baseline  =8  CNAME  LICENSE  MAINTAINERS.md  MANIFEST.in  NOTICE.md  OAI_CONFIG_LIST_sample  README.md  TRANSPARENCY_FAQS.md  announcements.md  codecov.yml  config.yaml  push_to_github.sh  pyproject.toml  requirements.txt  setup.jinja  setup.py  setup_ag2.py  setup_autogen.py
.devcontainer/: Dockerfile  README.md  devcontainer.env  devcontainer.json  docker-compose.yml  setup.sh
.devcontainer/dev/: Dockerfile
.devcontainer/full/: Dockerfile
.devcontainer/python-3.10/: devcontainer.json  docker-compose.yml
.devcontainer/python-3.11/: devcontainer.json  docker-compose.yml
.devcontainer/python-3.12/: devcontainer.json  docker-compose.yml
.devcontainer/python-3.13/: devcontainer.json  docker-compose.yml
.devcontainer/python-3.9/: devcontainer.json  docker-compose.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  general_issue.yml
.github/workflows/: build-docs.yml  build-mkdocs.yml  build.yml  contrib-graph-rag-tests.yml  contrib-llm-test.yml  contrib-openai.yml  contrib-test.yml  contrib-tests.yml  core-llm-test.yml  core-test.yml  deploy-website-mintlify.yml  deploy-website.yml  docs-check-broken-links.yml  docs-test.yml  dotnet-build.yml  dotnet-release.yml  integration-test.yml  lfs-check.yml  mkdocs-check-broken-links.yml  notify-codecov.yml  openai.yml  pr-checks.yml  pre-commit.yml  python-package.yml  test-deploy-website-mintlify.yml  test-integration.yml  test-with-optional-deps.yml  type-check.yml
RFCs/000/: RFC-000-global-run-function.ipynb.txt
autogen/: __init__.py  _pydantic.py  base_message.py  browser_utils.py  client_messages.py  code_utils.py  doc_utils.py  exception_utils.py  formatting_utils.py  function_utils.py  graph_utils.py  import_utils.py  llm_config.py  math_utils.py  messages.py  retrieve_utils.py  runtime_logging.py  token_count_utils.py  types.py  usage_summary.py  version.py
autogen/_website/: generate_api_references.py  generate_mkdocs.py  process_notebooks.py  utils.py
autogen/agentchat/: __init__.py  agent.py  assistant_agent.py  chat.py  conversable_agent.py  groupchat.py  user_proxy_agent.py  utils.py
autogen/agents/: __init__.py
autogen/cache/: __init__.py  abstract_cache_base.py  cache.py  cache_factory.py  cosmos_db_cache.py  disk_cache.py  in_memory_cache.py  redis_cache.py
autogen/coding/: __init__.py  base.py  docker_commandline_code_executor.py  factory.py  func_with_reqs.py  local_commandline_code_executor.py  markdown_code_extractor.py  utils.py
autogen/environments/: __init__.py  docker_python_environment.py  python_environment.py  system_python_environment.py  venv_python_environment.py  working_directory.py
autogen/events/: agent_events.py  base_event.py  helpers.py
autogen/interop/: __init__.py  helpers.py  interoperability.py  interoperable.py  registry.py
autogen/io/: __init__.py  base.py  console.py  run_response.py  thread_io_stream.py  websockets.py
autogen/logger/: __init__.py  base_logger.py  file_logger.py  logger_factory.py  logger_utils.py  sqlite_logger.py
autogen/mcp/: __main__.py  helpers.py  (+1 more)
dotnet/: README.md
notebook/: Chromadb_query_engine.ipynb  JSON_mode_example.ipynb  LlamaIndex_query_engine.ipynb  agent_tools_run_examples.ipynb  agentchat_MathChat.ipynb  agentchat_RetrieveChat.ipynb  agentchat_RetrieveChat_couchbase.ipynb  agentchat_RetrieveChat_mongodb.ipynb  agentchat_RetrieveChat_pgvector.ipynb  agentchat_RetrieveChat_qdrant.ipynb  agentchat_agentops.ipynb  agentchat_agentoptimizer.ipynb  agentchat_assistant_agent_standalone.ipynb  agentchat_auto_feedback_from_code_execution.ipynb  agentchat_azr_ai_search.ipynb  agentchat_captainagent.ipynb  agentchat_captainagent_crosstool.ipynb  agentchat_cost_token_tracking.ipynb  agentchat_custom_model.ipynb  agentchat_dalle_and_gpt4v.ipynb  agentchat_databricks_dbrx.ipynb  agentchat_function_call.ipynb  agentchat_function_call_async.ipynb  agentchat_function_call_code_writing.ipynb  agentchat_function_call_currency_calculator.ipynb  agentchat_function_call_currency_converter_tool_api.ipynb  agentchat_function_call_dependancy_injection.ipynb  agentchat_graph_rag_falkordb.ipynb  agentchat_graph_rag_neo4j.ipynb  agentchat_graph_rag_neo4j_native.ipynb  agentchat_grok_example.ipynb  agentchat_group_chat_with_llamaindex_agents.ipynb  agentchat_groupchat.ipynb  agentchat_groupchat_RAG.ipynb  agentchat_groupchat_customized.ipynb  agentchat_groupchat_finite_state_machine.ipynb  agentchat_groupchat_research.ipynb  agentchat_groupchat_stateflow.ipynb  agentchat_groupchat_tools.ipynb  agentchat_groupchat_vis.ipynb  (+123 more)
scripts/: broken-links-check.sh  build-setup-files.py  docs_build.sh  docs_build_mkdocs.sh  docs_serve.sh  docs_serve_mkdocs.sh  generate-devcontainers.py  generate-devcontainers.sh  integration-test.sh  lint.sh  pre-commit-build-setup-files.sh  pre-commit-license-check.py  pre-commit-lint.sh  pre-commit-mypy-run.sh  show-coverage-report.sh  test-core-llm.sh  test-core-skip-llm.sh  test-docs.sh  test-skip-llm.sh  test.sh  test_skip_openai.sh
templates/: main.jinja2
test/: conftest.py  test_base_message.py  test_browser_utils.py  test_client_messages.py  test_code_utils.py  test_conftest.py  test_function_utils.py  test_graph_utils.py  test_import.py  test_import_utils.py  test_json_utils.py  test_llm_config.py  test_logging.py  test_messages.py  test_notebook.py  test_pydantic.py  test_retrieve_utils.py  test_token_count.py  test_usage_summary.py  twoagent.py
tests/: test_agent_manager.py
website/: .gitignore  README.md  blogs_and_user_stories_authors.yml  build_website.sh  docusaurus.config.js  generate_api_references.py  mint-app-gallery-deps.js  mint-json-template.json  mint-json-template.json.jinja  mint-script.js  mint-style.css  mint.json  package-lock.json  package.json  process_api_reference.py  process_notebooks.py  serve_website.sh
(+1330 files in other folders)
